--- a/.github/workflows/update_dependencies.yml
+++ b/.github/workflows/update_dependencies.yml
@@ -2,7 +2,7 @@ name: Automated Dependencies Updater
 
 on:
   schedule:
-    - cron: "0 1 * * 2"
+    - cron: '0 1 * * 2'
 
 jobs:
   build:
@@ -10,7 +10,7 @@ jobs:
 
     steps:
       - name: Dependencies
-        uses: peiffer-innovations/action-dart-dependency-updater@v1.0.11
+        uses: peiffer-innovations/action-dart-dependency-updater@v1.0.12
         with:
           merge: true
           pull_request: true
