--- a/action.yml
+++ b/action.yml
@@ -1,33 +1,37 @@
 # action.yml
-name: "Deploy a Flutter Web build to GH Pages"
-description: "Validate Dart/Flutter package"
+name: 'Deploy a Flutter Web build to GH Pages'
+description: 'Validate Dart/Flutter package'
 inputs:
   branch:
-    description: "Branch to create a PR for"
-    default: "main"
+    description: 'Branch to create a PR for'
+    default: 'main'
     required: false
   channel:
-    description: "(Optional) Default flutter channel to use"
-    default: "stable"
+    description: '(Optional) Default flutter channel to use'
+    default: 'stable'
     required: false
+  message:
+    description: '(Optional) Set to the commit message to use'
+    required: false
+    default: 'actions-dart-dependency-updater: updating dependencies'
   merge:
-    description: "(Optional) Set to true to automatically merge the Pull Request if all static checks pass"
+    description: '(Optional) Set to true to automatically merge the Pull Request if all static checks pass'
     required: false
-    default: "true"
+    default: 'true'
   paths:
-    description: "(Optional) Comma delimited list of paths for the Dart / Flutter package(s) to update"
+    description: '(Optional) Comma delimited list of paths for the Dart / Flutter package(s) to update'
     required: false
-    default: "."
+    default: '.'
   pull_request:
-    description: "(Optional) Set to true to auto create a Pull Request with the updates, set to false to not create a PR"
+    description: '(Optional) Set to true to auto create a Pull Request with the updates, set to false to not create a PR'
     required: false
-    default: "true"
+    default: 'true'
   token:
-    description: "Access token for the GH"
+    description: 'Access token for the GH'
     required: true
 
 runs:
-  using: "composite"
+  using: 'composite'
   steps:
     - name: Checkout
       uses: actions/checkout@v2
