--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: 'dart_dependency_updater'
 description: 'A package that will scan for dependencies in a Dart repo, update them if needed, and can update the repo with them.'
-version: '1.0.20+5'
+version: '1.0.21'
 homepage: 'https://github.com/peiffer-innovations/actions_dart_dependency_updater'
 
-environment: 
+environment:
   sdk: '>=2.17.0 <3.0.0'
 
-dependencies: 
+dependencies:
   args: '^2.3.1'
   github: '^9.4.0'
   http: '^0.13.5'
@@ -19,10 +19,10 @@ dependencies:
   yaml: '^3.1.1'
   yaml_writer: '^1.0.2'
 
-dev_dependencies: 
+dev_dependencies:
   test: '^1.21.6'
 
-ignore_updates: 
+ignore_updates:
   - 'archive'
   - 'async'
   - 'boolean_selector'
