--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,28 @@
 name: 'dart_dependency_updater'
 description: 'A package that will scan for dependencies in a Dart repo, update them if needed, and can update the repo with them.'
-version: '1.0.22+23'
+version: '1.1.0'
 homepage: 'https://github.com/peiffer-innovations/actions_dart_dependency_updater'
 
-environment: 
+environment:
   sdk: '>=3.0.0 <4.0.0'
 
-dependencies: 
+dependencies:
   args: '^2.4.2'
   github: '^9.16.0'
   http: '^1.1.0'
   intl: '^0.18.1'
-  json_class: '^3.0.0'
   logging: '^1.2.0'
   meta: '^1.9.1'
-  pub_api_client: '^2.4.0'
+  oauth2: '^2.0.2'
   pub_semver: '^2.1.4'
+  pubspec: '^2.3.0'
   yaml: '^3.1.2'
   yaml_writer: '^1.0.3'
 
-dev_dependencies: 
+dev_dependencies:
   test: '^1.24.4'
 
-ignore_updates: 
+ignore_updates:
   - 'archive'
   - 'async'
   - 'boolean_selector'
