--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   github: '^9.16.0'
   http: '^1.1.0'
   intl: '^0.18.1'
+  json_class: '^3.0.0'
   logging: '^1.2.0'
   meta: '^1.9.1'
   oauth2: '^2.0.2'
