--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,28 +1,29 @@
 name: 'dart_dependency_updater'
 description: 'A package that will scan for dependencies in a Dart repo, update them if needed, and can update the repo with them.'
-version: '1.0.22+46'
+version: '1.1.0'
 homepage: 'https://github.com/peiffer-innovations/actions_dart_dependency_updater'
 
-environment: 
+environment:
   sdk: '>=3.0.0 <4.0.0'
 
-dependencies: 
+dependencies:
   args: '^2.5.0'
   github: '^9.24.0'
   http: '^1.2.1'
   intl: '^0.19.0'
   json_class: '^3.0.0+13'
   logging: '^1.2.0'
-  meta: '^1.9.1'
+  meta: '^1.12.0'
   pub_api_client: '^2.7.0'
   pub_semver: '^2.1.4'
   yaml: '^3.1.2'
   yaml_writer: '^2.0.0'
 
-dev_dependencies: 
+dev_dependencies:
+  flutter_lints: '^4.0.0'
   test: '^1.25.5'
 
-ignore_updates: 
+ignore_updates:
   - 'archive'
   - 'async'
   - 'boolean_selector'
